--- a/media/com_jce/editor/tinymce/themes/advanced/skins/default/ui.admin.css
+++ b/media/com_jce/editor/tinymce/themes/advanced/skins/default/ui.admin.css
@@ -33,7 +33,6 @@
 	font-size: 0;
 	vertical-align: top;
 	line-height: 1;
-	width: 100%;
 }
 
 .mceToolbarRow .mceToolbarItem .mceButton {
