--- a/media/com_jce/editor/tinymce/themes/advanced/skins/modern/ui.less
+++ b/media/com_jce/editor/tinymce/themes/advanced/skins/modern/ui.less
@@ -13,7 +13,6 @@
     .mceToolbarRow .mceToolbarItem {
         background-color: transparent;
         margin: 2px;
-        width: 100%;
 
         .mceTextBox {
             max-width: inherit;
@@ -24,6 +23,14 @@
             white-space: pre-wrap;
             font-size: 13px;
             line-height: 2;
+        }
+    }
+
+    .mceMenu {
+        .mceToolbarRow {
+            .mceToolbarItem {
+                width: 100%;
+            }
         }
     }
 
